<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="mainTitulo">Menu de opciones</string>
    <string name="nuevo_pedido">Nuevo Pedido</string>
    <string name="vListaProd">Ver Lista de Productos</string>
    <string name="vHistorialPedidos">Historial de Pedidos</string>
    <string name="SeleccionCategoria">Seleccione una categoria</string>
    <string name="ListaProd">Lista de productos</string>
    <string name="CantPedir">Cantidad a pedir</string>
    <string name="BtnAgregar">Agregar</string>
    <string name="edtProdCantidad">0</string>
    <string name="tituloPedido">Datos del pedido</string>
    <string name="campoCorreo">Correo Electronico</string>
    <string name="campoEntrega">Modo de Entrega</string>
    <string name="enLocal">Retira en local</string>
    <string name="aDomicilio">Enviar a domicilio</string>
    <string name="campoDomicilio">Direccion de envio</string>
    <string name="campoHora">Hora Solicitada (hh:mm)</string>
    <string name="btnAgregarProd">AGREGAR PRODUCTO</string>
    <string name="btnQuitarProd">QUITAR PRODUCTO</string>
    <string name="textoTotal">Total del pedido: $0</string>
    <string name="btnHPedido">HACER PEDIDO</string>
    <string name="btnVolv">VOLVER</string>
    <string name="ejemploCorreo">aaaa@bbbb.com</string>
    <string name="ejemploDomicilio">aaaa 1234</string>
    <string name="ejemploHora">hh:mm</string>
    <string name="btnNuevoHistorial">Nuevo</string>
    <string name="btnMenuHistorial">Menu</string>
    <string name="txtPedidosHistorial">Pedidos Realizados</string>
    <string name="mailFilaHistorial">Mail: </string>
    <string name="fyhFilaHistorial">Fecha y hora: </string>
    <string name="cantidadFilaHistorial">Cantidad items: </string>
    <string name="costoFilaHistorial">Costo: </string>
    <string name="estadoFilaHistorial">Estado: </string>
    <string name="btnCancelarPedidos">Cancelar</string>
    <string name="btnDetallePedidos">Ver Detalle</string>
    <string name="tv_producto">Producto:</string>
    <string name="tv_cant_producto">Cantidad del producto:</string>
    <string name="tv_precio">Precio: $</string>
    <string name="rdb_detallePedido"></string>
    <string name="totalPedido">Total del pedido: $</string>
    <string name="channel_name">pedidoNotificacion</string>
    <string name="channel_desc">Notificacion sobre cambios de estados en los pedidos</string>
    <string name="btnPrepPedidos">Preparar pedidos</string>
    <string name="chkRetirarDefecto">Retirar por defecto</string>
    <string name="chkRetirarDefectoSub">el pedido es para retirar</string>
    <string name="edtCorreoElectronico">Correo Electronico</string>
    <string name="edtCorreoElectronicoSub">Se usará por defecto</string>
    <string name="btnConfMain">CONFIGURACION</string>
    <string name="btnCategorias">CATEGORIAS</string>
    <string name="btnGuardarCategorias">GUARDAR</string>
    <string name="btnVolverCategorias">VOLVER</string>
    <string name="tvNombreCategoria">Nombre de la Categoria</string>
    <string name="tvBuscarProdPorId">Buscar Producto por Id</string>
    <string name="txtOn">Buscar por ID y actualizar</string>
    <string name="txtOff">Crear producto nuevo</string>
    <string name="btnBuscarPorIdGestion">Buscar por ID</string>
    <string name="tvDatosDelProducto">Datos del Producto</string>
    <string name="tvNombreProdu">Nombre</string>
    <string name="tvDescripcion">Descripcion</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvCategoria">Categoria</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnVolver">Volver</string>
    <string name="hintID">Ingrese Id</string>
    <string name="hintNombre">Ingrese Nombre</string>
    <string name="hintDescripcion">Describa el Producto</string>
    <string name="hintPrecio">Ingrese el precio</string>
    <string name="btnGestorProducto">Gestionar Producto</string>
    <string name="btnBorrarBD">Gestor BD</string>
    <string name="tvGest">Gestor Base de Datos</string>
    <string name="tvGestSel">seleccionar el menu de la toolbar para interactuar</string>


</resources>
