<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMainNuevoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_pedido" />

    <Button
        android:id="@+id/btnListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vListaProd" />

    <Button
        android:id="@+id/btnHistorialPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vHistorialPedidos" />

    <Button
        android:id="@+id/btnPrepararPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPrepPedidos" />

    <Button
        android:id="@+id/btnCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCategorias" />

    <Button
        android:id="@+id/btnConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConfMain" />

    <Button
        android:id="@+id/btnGestorProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGestorProducto" />

    <Button
        android:id="@+id/btnBorrarBd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBorrarBD" />

</LinearLayout>