<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoPedido">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloPedido" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campoCorreo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ejemploCorreo"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campoEntrega" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enLocal" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aDomicilio" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campoDomicilio" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="nnn 0000"
        android:inputType="none" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campoHora" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ejemploHora"
        android:inputType="time" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:id="@+id/lst_detalles"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:text="@string/btnAgregarProd"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:elevation="0dp"
            android:text="@string/btnQuitarProd"
            android:textAlignment="center"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoTotal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:text="@string/btnHPedido"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button7"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnVolv" />
    </LinearLayout>

</LinearLayout>