<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoriaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreCategoria" />
    <EditText
        android:id="@+id/txtNombreCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCrearCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarCategorias" />

    <Button
        android:id="@+id/btnCategoriaVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVolverCategorias" />
</LinearLayout>
